Added Conversion & Checks

--- a/PT1/.cs50.yml
+++ b/PT1/.cs50.yml
@@ -4,9 +4,12 @@ submit50:
     - !include "fixme2.py"
     - !include "weather.py"
     - !include "homework.py"
+    - !include "conversion.py"
     - !require fixme2.py
     - !require weather.py
     - !require homework.py
+    - !require conversions.py
+    
   style: false
 
 check50:
